networking/gateway/resources/http-routes/authelia.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-auth
    - name: cloudflare-gateway
      namespace: cloudflare
  hostnames:
    - auth.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Host
                value: auth.drmarchent.com
      backendRefs:
        - name: authelia
          port: 80
