networking/gateway/resources/http-routes/authentik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-authentik
  hostnames:
    - auth.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
