networking/gateway/resources/http-routes/bytestash.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bytestash
  namespace: bytestash
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-bytestash
    - name: cloudflare-gateway
      namespace: cloudflare
      sectionName: home-lan
  hostnames:
    - bytestash.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bytestash
          port: 5000
