networking/gateway/resources/http-routes/endurain.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: endurain
  namespace: endurain
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-endurain
    - name: cloudflare-gateway
      namespace: cloudflare
      sectionName: home-lan
  hostnames:
    - endurain.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: endurain
          port: 8080
