networking/gateway/resources/http-routes/garage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
  namespace: garage
spec:
  parentRefs:
    - name: default-gateway
      namespace: default
      sectionName: home-lan-garage
  hostnames:
    - "s3.homelab.local"
    - "*.s3.homelab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garage-default-cluster
          port: 3900
