networking/gateway/resources/http-routes/grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-grafana
  hostnames:
    - grafana.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Host
                value: grafana.drmarchent.com
              - name: X-Forwarded-Proto
                value: https
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: authelia
              namespace: authelia
              port: 80
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - accept
                - host
                - cookie
                - authorization
                - proxy-authorization
                - x-forwarded-method
                - x-forwarded-uri
                - x-forwarded-host
                - x-forwarded-proto
                - x-forwarded-for
                - x-real-ip
                - x-envoy-original-path
      backendRefs:
        - name: grafana-service
          port: 3000
