networking/gateway/resources/http-routes/memory-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memory-service
  namespace: memory-service
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-memory
    - name: cloudflare-gateway
      namespace: cloudflare
      sectionName: home-lan
  hostnames:
    - memory.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExternalAuth
          externalAuth:
            protocol: HTTP
            backendRef:
              name: authelia
              namespace: authelia
              port: 80
            http:
              path: /api/authz/ext-authz/
              allowedHeaders:
                - accept
                - host
                - cookie
                - authorization
                - proxy-authorization
                - x-forwarded-method
                - x-forwarded-uri
                - x-forwarded-host
                - x-forwarded-proto
                - x-forwarded-for
                - x-real-ip
                - x-envoy-original-path
              allowedResponseHeaders:
                - Remote-User
                - Remote-Groups
                - Remote-Name
                - Remote-Email
      backendRefs:
        - name: memory-service
          port: 8000
