networking/gateway/resources/http-routes/mlflow.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mlflow
  namespace: mlflow
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-mlflow
    - name: cloudflare-gateway
      namespace: cloudflare
      sectionName: home-lan
  hostnames:
    - mlflow.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mlflow
          port: 80
