networking/gateway/resources/http-routes/openwebui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-chat
    - name: cloudflare-gateway
      namespace: cloudflare
      sectionName: home-lan
  hostnames:
    - chat.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 80
