networking/gateway/resources/http-routes/renovate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: renovate
  namespace: renovate-operator
spec:
  parentRefs:
    - name: lan-gateway
      namespace: default
      sectionName: home-lan-renovate
  hostnames:
    - renovate.drmarchent.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: renovate-operator-renovate-operator
          port: 8081
